@@ -38,7 +38,6 @@ Global
 		HideSolutionNode = FALSE
 	EndGlobalSection
 	GlobalSection(AutomaticVersions) = postSolution
-		PrimaryVersionType.Release|Any CPU = AssemblyVersionAttribute
 		UpdateAssemblyVersion.Release|Any CPU = False
 		UpdateAssemblyFileVersion.Release|Any CPU = False
 		UpdateAssemblyInfoVersion.Release|Any CPU = False
